--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -80,6 +80,14 @@
     <Compile Include="CommandingWindowViewModel.cs" />
     <Compile Include="Command\MyICommand.cs" />
     <Compile Include="Model\Alarm.cs" />
+    <Compile Include="Model\AsynchronousMachine.cs" />
+    <Compile Include="Model\Breaker.cs" />
+    <Compile Include="Model\Disconector.cs" />
+    <Compile Include="Model\Enums.cs" />
+    <Compile Include="Model\IEquipment.cs" />
+    <Compile Include="Model\Substation.cs" />
+    <Compile Include="Model\TapChanger.cs" />
+    <Compile Include="Model\Transformator.cs" />
     <Compile Include="Model\UIModel.cs" />
     <Compile Include="Subscription\SubNMS.cs" />
     <Compile Include="ViewModel\AlarmViewModel.cs" />
