FEP configuration in progress

--- a/NetworkDynamicService/NetworkDynamicService.csproj
+++ b/NetworkDynamicService/NetworkDynamicService.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Cache\INDSRealTimePointCache.cs" />
     <Compile Include="Cache\NDSRealTimePointCache.cs" />
     <Compile Include="FrontEndProcessorServiceProxy.cs" />
+    <Compile Include="NDSConfigurationProxy.cs" />
     <Compile Include="NetworkDynamicServiceHost.cs" />
     <Compile Include="PointOperateService.cs" />
     <Compile Include="ProxyPool\PointUpdateProxy.cs" />
