--- a/SCADA/FrontEndProcessorService/App.config
+++ b/SCADA/FrontEndProcessorService/App.config
@@ -26,6 +26,14 @@
           </baseAddresses>
         </host>
       </service>
+      <service name="FrontEndProcessorService.NDSConfigurationService">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.BackEnd_FrontEnd.INDSBasePointCacheItems" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:11111/INDSBasePointCacheItems" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
   </system.serviceModel>
 </configuration>
