--- a/SCADA/FrontEndProcessorService/FrontEndProcessorService.csproj
+++ b/SCADA/FrontEndProcessorService/FrontEndProcessorService.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Configuration\ConfigReader.cs" />
     <Compile Include="FieldCommunicationService.cs" />
     <Compile Include="FrontEndProcessorService.cs" />
+    <Compile Include="NDSConfigurationService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="PointDataModel\AnalaogInput.cs" />
     <Compile Include="PointDataModel\AnalogBase.cs" />
