Commanding Service on NDS

--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -3,38 +3,39 @@
   
   <system.serviceModel>
     <services>
-      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="BackEndProcessorService.BackEndPocessingModule">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData"/>
+      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior"
+        name="BackEndProcessorService.BackEndPocessingModule">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10050/IBackEndProessingData"/>
+            <add baseAddress="net.tcp://localhost:10050/IBackEndProessingData" />
           </baseAddresses>
         </host>
       </service>
-      
-      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.PointUpdater.StateUpdateService">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService"/>
+      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior"
+        name="NetworkDynamicService.PointUpdater.StateUpdateService">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10005/IStateUpdateService"/>
+            <add baseAddress="net.tcp://localhost:10005/IStateUpdateService" />
           </baseAddresses>
         </host>
       </service>
-      
-      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.PointOperateService">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService"/>
+      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior"
+        name="NetworkDynamicService.CommandingService">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10022/IFieldCommunicationService"/>
+            <add baseAddress="net.tcp://localhost:10022/IFieldCommunicationService" />
           </baseAddresses>
         </host>
       </service>
-      
-      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.Transaction.ModelUpdateContract">
-        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract"/>
+      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior"
+        name="NetworkDynamicService.Transaction.ModelUpdateContract">
+        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10055/NDS"/>
+            <add baseAddress="net.tcp://localhost:10055/NDS" />
           </baseAddresses>
         </host>
       </service>
