--- a/SCADA/FrontEndProcessorService/FrontEndProcessorService.csproj
+++ b/SCADA/FrontEndProcessorService/FrontEndProcessorService.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Exceptions\ConfigurationException.cs" />
     <Compile Include="Configuration\ConfigReader.cs" />
+    <Compile Include="FEPCommandingService.cs" />
     <Compile Include="FieldCommunicationService.cs" />
     <Compile Include="FrontEndProcessorService.cs" />
     <Compile Include="NDSConfigurationService.cs" />
