--- a/SCADA/FrontEndProcessorService/App.config
+++ b/SCADA/FrontEndProcessorService/App.config
@@ -18,11 +18,11 @@
     </client>
 
     <services>
-      <service name="FrontEndProcessorService.FieldCommunicationService">
+      <service name="FrontEndProcessorService.FEPCommandingService">
         <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFEPCommandingServiceContract" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10002/IFieldCommunicationService" />
+            <add baseAddress="net.tcp://localhost:10002/IFEPCommandingServiceContract" />
           </baseAddresses>
         </host>
       </service>
