--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -4,11 +4,11 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior"
-        name="BackEndProcessorService.BackEndPocessingModule">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData" />
+        name="NetworkDynamicService.ProcessingService">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IProcessingServiceContract" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10050/IBackEndProessingData" />
+            <add baseAddress="net.tcp://localhost:10050/IProcessingServiceContract" />
           </baseAddresses>
         </host>
       </service>
@@ -26,7 +26,7 @@
         <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFEPCommandingServiceContract" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10022/IFieldCommunicationService" />
+            <add baseAddress="net.tcp://localhost:10022/IFEPCommandingServiceContract" />
           </baseAddresses>
         </host>
       </service>
@@ -43,9 +43,9 @@
 
     
     <client>
-      <endpoint address="net.tcp://localhost:10002/IFieldCommunicationService"
-        binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService"
-        name="FieldCommunicationServiceEndPoint" />
+      <endpoint address="net.tcp://localhost:10002/IFEPCommandingServiceContract"
+        binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFEPCommandingServiceContract"
+        name="FEPCommandingServiceContract" />
       <endpoint address="net.tcp://localhost:30003/IStateUpdateService"
         binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService"
         name="StateUpdateServiceEndPoint" />
