--- a/NetworkDynamicService/NetworkDynamicService.csproj
+++ b/NetworkDynamicService/NetworkDynamicService.csproj
@@ -55,6 +55,8 @@
     <Compile Include="NDSConfigurationProxy.cs" />
     <Compile Include="NetworkDynamicServiceHost.cs" />
     <Compile Include="CommandingService.cs" />
+    <Compile Include="ProcessingService.cs" />
+    <Compile Include="ProxyPool\FepCommandingServiceProxy.cs" />
     <Compile Include="ProxyPool\PointUpdateProxy.cs" />
     <Compile Include="StateUpdater\StateUpdateService.cs" />
     <Compile Include="Program.cs" />
