--- a/SCADA/ScadaCommon/ScadaCommon.csproj
+++ b/SCADA/ScadaCommon/ScadaCommon.csproj
@@ -72,7 +72,8 @@
     <Compile Include="PointIdentifierHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceContract\IAlarmEventService.cs" />
-    <Compile Include="ServiceContract\IBackEndProessingData.cs" />
+    <Compile Include="ServiceContract\IBackendProcessor.cs" />
+    <Compile Include="ServiceContract\IProcessingServiceContract.cs" />
     <Compile Include="ServiceContract\ICommandingServiceContract.cs" />
     <Compile Include="ServiceContract\IFEPCommandingServiceContract.cs" />
     <Compile Include="ServiceContract\IPointUpdateService.cs" />
