commanding almost done

--- a/SCADA/FrontEndProcessorService/App.config
+++ b/SCADA/FrontEndProcessorService/App.config
@@ -6,9 +6,9 @@
 
   <system.serviceModel>
     <client>
-      <endpoint address="net.tcp://localhost:10050/IBackEndProessingData"
+      <endpoint address="net.tcp://localhost:10050/IProcessingServiceContract"
                 binding="netTcpBinding"
-                contract="ScadaCommon.ServiceContract.IBackEndProessingData" name="NetworkDynamicServiceEndPoint">
+                contract="ScadaCommon.ServiceContract.IProcessingServiceContract" name="NetworkDynamicServiceEndPoint">
       </endpoint>
 
       <endpoint address="net.tcp://localhost:10005/IStateUpdateService"
