--- a/CalculationEngine/CalculationEngine.csproj
+++ b/CalculationEngine/CalculationEngine.csproj
@@ -44,12 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SCADAStuff\ScadaService.cs" />
+    <Compile Include="CalcEngine.cs" />
+    <Compile Include="Model\Analog.cs" />
+    <Compile Include="Model\Discrete.cs" />
+    <Compile Include="Model\IdObject.cs" />
     <Compile Include="TransactionStuff\ModelUpdateContract.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransactionStuff\TransactionService.cs" />
-    <Compile Include="TransactionStuff\UpdateModelServiceHost.cs" />
+    <Compile Include="TransactionStuff\CEServiceHost.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -58,10 +61,6 @@
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{6C234280-508A-47A4-B9CA-2677082EF85F}</Project>
       <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ScadaContracts\ScadaContracts.csproj">
-      <Project>{5B9135BD-40C9-4DFB-AE6C-054A8CDBE18F}</Project>
-      <Name>ScadaContracts</Name>
     </ProjectReference>
     <ProjectReference Include="..\TransactionManagerContracts\TransactionManagerContracts.csproj">
       <Project>{0a8f68ec-31cb-4fd1-b54a-dcf2fc97bbec}</Project>
