--- a/PubSub/PubSub.csproj
+++ b/PubSub/PubSub.csproj
@@ -46,8 +46,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PubSubEngine\Filter.cs" />
-    <Compile Include="PubSubEngine\PubNMS.cs" />
-    <Compile Include="PubSubEngine\SubNMS.cs" />
+    <Compile Include="PubSubEngine\Pub.cs" />
+    <Compile Include="PubSubEngine\Sub.cs" />
     <Compile Include="ServerHost.cs" />
   </ItemGroup>
   <ItemGroup>
