--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
@@ -42,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlarmEvent\Alarm.cs" />
+    <Compile Include="AlarmEvent\Event.cs" />
     <Compile Include="EnumDescs.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="GDA\Association.cs" />
