--- a/AlarmEventService/App.config
+++ b/AlarmEventService/App.config
@@ -24,8 +24,8 @@
 
       <bindings>
         <basicHttpBinding>
-          <binding name="BasicHttpBinding_IAlarmServiceOperations"/>
-          <binding name="BasicHttpBinding_IEventServiceOperations"/>
+          <binding name="BasicHttpBinding_IEventServiceOperations" />
+          <binding name="BasicHttpBinding_IAlarmServiceOperations" />
         </basicHttpBinding>
         <netTcpBinding>
           <binding name="netTcpBindingNoSecurity" closeTimeout="00:30:00"
@@ -51,12 +51,12 @@
       </behaviors>
       
         <client>
-            <endpoint address="http://localhost:55517/AlarmServiceOperations.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IAlarmServiceOperations" contract="AlarmServiceRef.IAlarmServiceOperations"
-                name="BasicHttpBinding_IAlarmServiceOperations"/>
-            <endpoint address="http://localhost:55517/EventServiceOperations.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IEventServiceOperations" contract="EventServiceRef.IEventServiceOperations"
-                name="BasicHttpBinding_IEventServiceOperations"/>
+            <endpoint address="http://localhost:55517/EventServiceOperations.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IEventServiceOperations"
+                contract="EventServiceRef.IEventServiceOperations" name="BasicHttpBinding_IEventServiceOperations" />
+            <endpoint address="http://localhost:55517/AlarmServiceOperations.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAlarmServiceOperations"
+                contract="AlarmServiceRef.IAlarmServiceOperations" name="BasicHttpBinding_IAlarmServiceOperations" />
         </client>
     </system.serviceModel>
   
