--- a/UserInterface/App.config
+++ b/UserInterface/App.config
@@ -14,13 +14,9 @@
 
   <system.serviceModel>
     <client>
-      <endpoint address="net.tcp://localhost:10022/ICommandingServiceContract"
-        binding="netTcpBinding" contract="ScadaCommon.ServiceContract.ICommandingServiceContract"
-        name="UICommandingService" />
+      <endpoint address="net.tcp://localhost:10022/ICommandingServiceContract" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.ICommandingServiceContract" name="UICommandingService" />
 
-      <endpoint address="net.tcp://localhost:10058/IAlarmEventService"
-        binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IAlarmEventService"
-        name="AlarmEventService" />
+      <endpoint address="net.tcp://localhost:10058/IAlarmEventService" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IAlarmEventService" name="AlarmEventService" />
     </client>
   </system.serviceModel>
   
