Alarms can be acknowledged, button blinks when there are alarms...

--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -85,6 +85,8 @@
     </Compile>
     <Compile Include="CommandingWindowViewModel.cs" />
     <Compile Include="Command\MyICommand.cs" />
+    <Compile Include="Converters\BooleanConverter.cs" />
+    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Model\AsynchronousMachine.cs" />
     <Compile Include="Model\Breaker.cs" />
     <Compile Include="Model\Disconector.cs" />
