--- a/AlarmEventService/AlarmEventService.csproj
+++ b/AlarmEventService/AlarmEventService.csproj
@@ -62,59 +62,15 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\AlarmServiceRef\AlarmServiceOperations.wsdl" />
-    <None Include="Connected Services\AlarmServiceRef\AlarmServiceOperations.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\AlarmServiceRef\AlarmServiceOperations1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\AlarmServiceRef\AlarmServiceOperations2.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\AlarmServiceRef\AlarmServiceOperations3.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\EventServiceRef\EventServiceOperations.wsdl" />
-    <None Include="Connected Services\EventServiceRef\EventServiceOperations.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\EventServiceRef\EventServiceOperations1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\EventServiceRef\EventServiceOperations2.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\EventServiceRef\EventServiceOperations3.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Common.AlarmEvent.Alarm.datasource" />
     <None Include="Properties\DataSources\Common.AlarmEvent.Event.datasource" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Connected Services\AlarmServiceRef\" />
-    <WCFMetadataStorage Include="Connected Services\EventServiceRef\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\EventServiceRef\EventServiceOperations.disco" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\EventServiceRef\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\EventServiceRef\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\EventServiceRef\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\AlarmEventServiceInfrastructure\AlarmEventServiceInfrastructure.csproj">
+      <Project>{B9EC493F-D864-4479-86F4-E4EF6C500831}</Project>
+      <Name>AlarmEventServiceInfrastructure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{6c234280-508a-47a4-b9ca-2677082ef85f}</Project>
       <Name>Common</Name>
@@ -123,21 +79,6 @@
       <Project>{823d1355-efd0-481c-a0d9-fda0c4ea37df}</Project>
       <Name>ScadaCommon</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\AlarmServiceRef\AlarmServiceOperations.disco" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\AlarmServiceRef\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\AlarmServiceRef\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\AlarmServiceRef\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
