Commanding implementation on CE

--- a/CalculationEngine/App.config
+++ b/CalculationEngine/App.config
@@ -20,6 +20,10 @@
       </service>
     </services>
 
+    <client>
+      <endpoint address="net.tcp://localhost:10022/ICommandingServiceContract" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.ICommandingServiceContract" name="CECommandingProxy" />
+    </client>
+
     <bindings>
       <netTcpBinding>
         <binding name="netTcpBindingNoSecurity" closeTimeout="00:30:00"
