--- a/CalculationEngine/CalculationEngine.csproj
+++ b/CalculationEngine/CalculationEngine.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalcEngine.cs" />
+    <Compile Include="CommandingProxy.cs" />
     <Compile Include="Model\Analog.cs" />
     <Compile Include="Model\AsyncMachine.cs" />
     <Compile Include="Model\Discrete.cs" />
@@ -71,6 +72,10 @@
     <ProjectReference Include="..\ScadaContracts\ScadaContracts.csproj">
       <Project>{5B9135BD-40C9-4DFB-AE6C-054A8CDBE18F}</Project>
       <Name>ScadaContracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SCADA\ScadaCommon\ScadaCommon.csproj">
+      <Project>{823D1355-EFD0-481C-A0D9-FDA0C4EA37DF}</Project>
+      <Name>ScadaCommon</Name>
     </ProjectReference>
     <ProjectReference Include="..\TransactionManagerContracts\TransactionManagerContracts.csproj">
       <Project>{0a8f68ec-31cb-4fd1-b54a-dcf2fc97bbec}</Project>
